initialized jekyll project.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello, world!
+---
+layout: default
+title: Blogging Like a Hacker
+---
+
+posts:
+<br>
+{% for post in site.posts %}
+  <a href="{{ post.url }}">{{ post.title }}</a>
+<br>
+{% endfor %}
