use pretty fonts, touch up code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@ title: Blogging Like a Hacker
 posts:
 <br>
 {% for post in site.posts %}
-  <a href="{{ post.url }}">{{ post.title }}</a>
-<br>
+  <a href="{{ post.url }}">{{ post.title }}</a><br>
 {% endfor %}
