--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,14 @@
-about me.
+---
+layout: default
+title: about me
+---
+
+<div class="about">
+	<h3>About Me</h3>
+	<p>My name is Bryan Bickford.</p>
+	<p>I write code.</p>
+	<p>Here is my pgp key
+	```
+	pgpkeyldskhflkdsjfoiewjfoi
+	</p>
+</div>
